--- a/build.gradle
+++ b/build.gradle
@@ -24,16 +24,40 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	
+    implementation 'org.webjars:webjars-locator-core'
+    implementation 'org.webjars:bootstrap:3.3.7'
+    implementation 'org.webjars:jquery:3.1.0'
+
+	implementation 'org.apache.httpcomponents:httpclient:4.5.8'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	asciidoctor 'org.springframework.restdocs:spring-restdocs-asciidoctor'
+	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 }
 
+wrapper {
+	gradleVersion = '5.2.1'
+}
+
+ext {
+	snippetsDir = file('build/generated-snippets')
+}
+
 test {
 	outputs.dir snippetsDir
+}
+
+bootJar {
+	dependsOn asciidoctor
+	from ("${asciidoctor.outputDir}/html5") {
+		into 'static/docs'
+	}
 }
 
 asciidoctor {
